[tool.poetry]
name = "hass-ldap-http-auth"
version = "0.1.0"
description = ""
authors = ["Xert <xertdev@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
homeassistant = "^2023.7.3"
ldap3 = "2.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
